@@ -6,3 +6,4 @@ from .field_block import *  # NOQA
 from .struct_block import *  # NOQA
 from .list_block import *  # NOQA
 from .stream_block import *  # NOQA
+from .static_block import *  # NOQA
